# nekos-rpg-maker-mv

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  server.js
public/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
