[package]
name = "nekos"
version = "1.0.0"
description = "Nekos RPG Maker MV JSON decoder"
authors = ["nekobot"]
edition = "2021"

[lib]
name = "nekos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
time = { version = "0.3", features = ["formatting"] }
